# imgui-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
examples/common/embedded_font/: font_roboto_medium.h
examples/sdl3_opengl3/: CMakeLists.txt  main.c
examples/win32_opengl3/: CMakeLists.txt  main.c
include/imgui/backend/: imgui_impl_opengl3.h  imgui_impl_sdl3.h  imgui_impl_win32.h
include/imgui_c/: dcimgui.h  dcimgui_internal.h  imconfig.h
include/imgui_c/backend/: opengl3.h  sdl3.h  win32.h
src/: dcimgui.cpp  dcimgui_internal.cpp
src/backend_wrapper/: opengl3.cpp  sdl3.cpp  win32.cpp
